numbat/tests/snapshots/prelude_and_examples__typecheck_error_snapshots@assert_eq_1.nbt.snap
---
source: numbat/tests/prelude_and_examples.rs
expression: output
input_file: examples/typecheck_error/assert_eq_1.nbt
---
error: while type checking
  ┌─ <internal:3>:1:1
  │
1 │ assert_eq(2 meter, 2 second)
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  │ │         │        │
  │ │         │        Time
  │ │         Length
  │ Incompatible types in 'assert_eq' call
